--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    {{#if userInSession}}
+    {{!-- <a href="/userProfile">Profile</a> --}}
+    
+    <form id="logout-form" action="/logout" method="POST">
+      <button>Logout</button>
+    </form>
+    {{/if}}
 
     {{{body}}}
 
