--- a/views/users/userProfile.hbs
+++ b/views/users/userProfile.hbs
@@ -1,6 +1,7 @@
 {{#if userInSession}}
 <h1>Welcome, {{userInSession.username}}</h1>
 <a href="#">Adverts</a>
+<a href="/cart">Cart</a>
 
 {{!-- <form id="logout-form" action="/logout" method="POST">
  <button>Logout</button> --}}
