message.routes.js, cart.hbs, cart.history.hbs and messages.hbs DONE

--- a/views/users/userProfile.hbs
+++ b/views/users/userProfile.hbs
@@ -2,6 +2,7 @@
 <h1>Welcome, {{userInSession.username}}</h1>
 <a href="#">Adverts</a>
 <a href="/cart">Cart</a>
+<a href="/messages">Messages</a>
 
 {{!-- <form id="logout-form" action="/logout" method="POST">
  <button>Logout</button> --}}
