--- a/views/messages/messages.hbs
+++ b/views/messages/messages.hbs
@@ -1,5 +1,12 @@
+<form action="/send-message" method="POST">
+  <label for="recipient">Recipient:</label>
+  <input type="text" name="recipient" id="recipient" />
+
+  <label for="subject">Subject:</label>
+  <input type="text" name="subject" id="subject" />
+
+  <label for="message">Message:</label>
+  <textarea name="message" id="message" rows="5"></textarea>
 
   <button type="submit">Send Message</button>
 </form>
-
-//to merge
