--- a/views/users/userProfile.hbs
+++ b/views/users/userProfile.hbs
@@ -4,7 +4,9 @@
 <a href="/cart">Cart</a>
 <a href="/messages">Messages</a>
 
+<a href="#">Add Advert</a>
 {{!-- <form id="logout-form" action="/logout" method="POST">
  <button>Logout</button> --}}
 </form>
 {{/if}}
+
