Full CRUD on adverts

--- a/views/users/userProfile.hbs
+++ b/views/users/userProfile.hbs
@@ -1,6 +1,7 @@
 {{#if userInSession}}
 <h1>Welcome, {{userInSession.username}}</h1>
-<a href="#">Adverts</a>
+<a href="/adverts/new">Create advert</a>
+<a href="/adverts">See adverts</a>
 <a href="/cart">Cart</a>
 <a href="/messages">Messages</a>
 
