--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
-<nav>
-  <ul>
+<nav class="navbar">
+  <ul class="navbar-menu">
     <li><a href="/userProfile">profile</a></li>
     <li><a href="/adverts/new">add advert</a></li>
     <li><a href="/messages">inbox</a></li>
@@ -9,6 +9,5 @@
         <button>Logout</button>
       </form>
     </li>
-
   </ul>
 </nav>
