--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,53 @@
+*,
+*::before,
+*::after {
+  box-sizing: content-box;
+  margin: 0;
+}
+
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 1em;
 }
 
 a {
-  color: #00b7ff;
+  color: black;
+  text-decoration: none;
+  text-transform: capitalize;
+  font-weight: 700;
+}
+
+a:hover,
+a:focus {
+  color: blue;
 }
 
 h1 {
-  color: 15px;
+  font-size: 2.5rem;
+}
+
+/* NAVBAR */
+
+nav {
+  display: flex;
+  justify-content: end;
+  margin: 1em;
+}
+
+nav > ul {
+  font-size: 1rem;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+}
+
+/* ADVERTS CARD */
+
+.card-advert {
+  border: 1px solid black;
+  margin: 1em;
 }
