--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,6 +48,12 @@ h1 {
 /* ADVERTS CARD */
 
 .card-advert {
-  border: 1px solid black;
+  /* //border: 1px solid black; */
   margin: 1em;
+}
+
+dialog {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
