--- a/views/cart/cart.hbs
+++ b/views/cart/cart.hbs
@@ -1,4 +1,4 @@
-{{#if items.length}}
+{{!-- {{#if items.length}}
   <h2>Your Shopping Cart</h2>
   <ul>
     {{#each items}}
@@ -8,4 +8,4 @@
   <p>Total: {{total}}</p>
 {{else}}
   <p>Your cart is empty.</p>
-{{/if}}
+{{/if}} --}}
