--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,8 @@
 <nav class="navbar">
   <ul class="navbar-menu">
     <li><a href="/userProfile">profile</a></li>
+    <li><a href="/cart">cart</a></li>
+    <li><a href="/adverts">adverts</a></li>
     <li><a href="/adverts/new">add advert</a></li>
     <li><a href="/messages">inbox</a></li>
     <li>
