--- a/views/cart/cart.hbs
+++ b/views/cart/cart.hbs
@@ -23,7 +23,7 @@
       <tr class="cart-total">
         <td>
           <h2 class="cart-total-price">
-            £<span>0</span>
+            £<span>{{price}}</span>
           </h2>
         </td>
       </tr>
