--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,106 @@
 <p>Welcome Ironhacker!</p>
 
 {{#if userInSession}}
-<a href="/userProfile">Profile</a>
-<a href="#">Adverts</a>
+  <a href="/userProfile">Profile</a>
+  <a href="#">Adverts</a>
 {{else}}
-<a href="/signup">sign up</a>
-<a href="/login">login</a>
+  <a href="/signup">sign up</a>
+  <a href="/login">login</a>
 {{/if}}
+
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+              {{! <p class="text-white-50 mb-5">Please enter your login and
+                password!</p> }}
+
+              {{! <div class="form-outline form-white mb-4">
+                <input
+                  type="email"
+                  id="typeEmailX"
+                  class="form-control form-control-lg"
+                />
+                <label class="form-label" for="typeEmailX">Email</label>
+              </div> }}
+
+              {{! <div class="form-outline form-white mb-4">
+                <input
+                  type="password"
+                  id="typePasswordX"
+                  class="form-control form-control-lg"
+                />
+                <label class="form-label" for="typePasswordX">Password</label>
+              </div> }}
+
+              <form action="/login" method="POST">
+
+                <label class="form-label" for="typeUsernameX">
+                  Username
+                  <input
+                    type="text"
+                    name="username"
+                    placeholder="Your username"
+                    id="typeUsernameX"
+                    class="form-control form-control-lg"
+                  />
+                </label>
+
+                <label class="form-label" for="typeEmailX">
+                  Email
+                  <input
+                    type="email"
+                    name="email"
+                    placeholder="Your email"
+                    id="typeEmailX"
+                    class="form-control form-control-lg"
+                  />
+                </label>
+
+                <label class="form-label" for="typePasswordX">
+                  Password
+                  <input
+                    type="password"
+                    name="password"
+                    placeholder="Your password"
+                    id="typePasswordX"
+                    class="form-control form-control-lg"
+                  />
+                </label>
+
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">
+                  Login
+                </button>
+              </form>
+              <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                <a href="#!" class="text-white"><i
+                    class="fab fa-facebook-f fa-lg"
+                  ></i></a>
+                <a href="#!" class="text-white"><i
+                    class="fab fa-twitter fa-lg mx-4 px-2"
+                  ></i></a>
+                <a href="#!" class="text-white"><i
+                    class="fab fa-google fa-lg"
+                  ></i></a>
+              </div>
+
+            </div>
+
+            <div>
+              <p class="mb-0">Don't have an account?
+                <a href="/signup" class="text-white-50 fw-bold">Sign Up</a>
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
