--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul class="navbar-menu">
     <li><a href="/userProfile">profile</a></li>
-    <li><a href="/adverts/new">add advert</a></li>
+    <li><a href="#" class="open-button" id="addAdvert">add advert</a></li>
     <li><a href="/messages">inbox</a></li>
     <li>
 
@@ -11,3 +11,25 @@
     </li>
   </ul>
 </nav>
+<dialog class="modal" id="addAdvert">
+  <form action="/adverts/adverts" method="POST">
+    <label for="title">Title
+      <input type="text" name="title" required />
+    </label>
+
+    <label for="amount">Amount
+      <input type="text" name="amount" required />
+    </label>
+
+    <label for="description">Description
+      <textarea name="description" required></textarea>
+    </label>
+
+    <label for="cost">Cost
+      <input type="number" name="cost" />
+    </label>
+
+    <button type="submit">Post Advert</button>
+
+  </form>
+</dialog>
