--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -51,43 +51,43 @@
   />
 </label>
     <br />
-    <label class="form-label" for="typeAddressX">
+    <label class="form-label" for="typeCityX">
                   Address
                   <input
-                    type="City"
-                    name="City"
+                    type="text"
+                    name="city"
                     placeholder="City"
-                    id="typeAddressX"
+                    id="typeCityX"
                     class="form-control form-control-lg"
                   />
                 </label>
 
                   <label class="form-label" for="typeAddressX">
                   <input
-                    type="street+housenumber"
-                    name="street+housenumber"
+                    type="text"
+                    name="address"
                     placeholder="Street + House number"
                     id="typeAddressX"
                     class="form-control form-control-lg"
                   />
                 </label>
                   
-                  <label class="form-label" for="typeAddressX">
+                  <label class="form-label" for="typePostcodeX">
                   <input
-                    type="postcode"
+                    type="text"
                     name="postcode"
                     placeholder="PostCode"
-                    id="typeAddressX"
+                    id="typePostcodeX"
                     class="form-control form-control-lg"
                   />
                 </label>
 
-                  <label class="form-label" for="typeAddressX">
+                  <label class="form-label" for="typeCountryX">
                   <input
-                    type="country"
+                    type="text"
                     name="country"
                     placeholder="Country"
-                    id="typeAddressX"
+                    id="typeCountryX"
                     class="form-control form-control-lg"
                   />
                 </label>
@@ -102,5 +102,5 @@
   </form>
 </div>
 
-{{! Template }}
+
 
