add upload images

--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -1,7 +1,7 @@
 <div class="card-advert container gap-3">
   {{#each adverts}}
     <div class="card col mb-4" style="width: 18rem">
-      <img src="{{picture}}" alt="{{title}}" class="card-img-top" />
+      <img src="{{imageUrl}}" alt="{{title}}" class="card-img-top" />
       <div class="card-body">
         <h5 class="card-title">{{title}}</h5>
         <p class="card-text">{{description}}</p>
