--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -1,7 +1,7 @@
 <div class="card-advert">
   {{#each adverts}}
     <div class="card-advert-info">
-      <img src="{{picture}}" alt="{{title}}" />
+      <img src="{{imageUrl}}" alt="{{title}}" />
       <div>
         <h5>{{title}}</h5>
         <button class="open-button" id="{{@index}}">Details</button>
