Image, Update and Modals fixed

--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -16,7 +16,7 @@
       <p>{{description}}</p>
       <p><strong>Amount:</strong> {{amount}}</p>
       <p><strong>Cost:</strong> {{cost}}</p>
-      <a href="#" class="btn btn-primary">Contact seller</a>
+      <a href="/sendMessage" class="btn btn-primary">Contact seller</a>
       <p>Details</p>
 
       <small>Posted by <strong>{{creator}}</strong> on {{createdAt}}</small>
