--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,7 +3,7 @@
     <li><a href="/userProfile">profile</a></li>
     <li><a href="/cart">cart</a></li>
     <li><a href="/adverts">adverts</a></li>
-    <li><a href="/adverts/new">add advert</a></li>
+    <a href="#" class="open-button" id="addAdvertNav">Add Advert</a>
     <li><a href="/messages">inbox</a></li>
     <li>
 
@@ -13,7 +13,7 @@
     </li>
   </ul>
 </nav>
-<dialog class="modal" id="addAdvert">
+<dialog class="modal" id="addAdvertNav">
   <form action="/adverts/adverts" method="POST">
     <label for="title">Title
       <input type="text" name="title" required />
