--- a/views/users/userProfile.hbs
+++ b/views/users/userProfile.hbs
@@ -3,9 +3,8 @@
 <a href="/adverts">See adverts</a>
 <a href="/cart">Cart</a>
 <a href="/messages">Messages</a>
-{{!-- <form id="logout-form" action="/logout" method="POST">
- <button>Logout</button> --}}
-</form>
+{{! <form id="logout-form" action="/logout" method="POST">
+ <button>Logout</button> }}
 <dialog class="modal" id="addAdvert">
   <form action="/adverts/adverts" method="POST">
     <label for="title">Title
@@ -23,8 +22,7 @@
     <label for="cost">Cost
       <input type="number" name="cost" />
     </label>
-
+    
     <button type="submit">Post Advert</button>
-
   </form>
 </dialog>
