--- a/views/adverts/update-advert.hbs
+++ b/views/adverts/update-advert.hbs
@@ -5,8 +5,8 @@
     <input type="text" name="title" value="{{ advert.title }}">
   </div>
   <div>
-    <label for="picture">Picture:</label>
-    <input type="text" name="picture" value="{{ advert.picture }}">
+    <label for="imageUrl">Upload Image:
+    <input type="file" name="imageUrl" value="{{ advert.picture }}">
   </div>
   <div>
     <label for="amount">Amount:</label>
