--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,9 +1,9 @@
-<nav class="navbar">
+<nav class="navbar bg-header py-7 px-4 text-white gap-3">
   <ul class="navbar-menu">
     <li><a href="/userProfile">profile</a></li>
     <li><a href="/cart">cart</a></li>
     <li><a href="/adverts">adverts</a></li>
-    <li><a href="/adverts/new">add advert</a></li>
+    <a href="#" class="open-button" id="addAdvert">Add Advert</a>
     <li><a href="/messages">inbox</a></li>
     <li>
 
@@ -13,25 +13,39 @@
     </li>
   </ul>
 </nav>
+
 <dialog class="modal" id="addAdvert">
-  <form action="/adverts/adverts" method="POST">
-    <label for="title">Title
-      <input type="text" name="title" required />
+  <form action="/adverts/adverts" method="POST" enctype="multipart/form-data" class="p-4">
+    <h2 class="text-2xl mb-4" style="color: #08415c;">Add Advert</h2>
+
+    <label for="title" class="flex flex-col">
+      <span class="text-sm mb-1" style="color: #08415c;">Title:</span>
+      <input type="text" name="title" required class="border rounded py-2 px-3" />
     </label>
 
-    <label for="amount">Amount
-      <input type="text" name="amount" required />
+    <label for="amount" class="flex flex-col">
+      <span class="text-sm mb-1" style="color: #08415c;">Amount:</span>
+      <input type="text" name="amount" required class="border rounded py-2 px-3" />
     </label>
 
-    <label for="description">Description
-      <textarea name="description" required></textarea>
+    <label for="description" class="flex flex-col">
+      <span class="text-sm mb-1" style="color: #08415c;">Description:</span>
+      <textarea name="description" required class="border rounded py-2 px-3"></textarea>
     </label>
 
-    <label for="cost">Cost
-      <input type="number" name="cost" />
+    <label for="cost" class="flex flex-col">
+      <span class="text-sm mb-1" style="color: #08415c;">Cost:</span>
+      <input type="number" name="cost" class="border rounded py-2 px-3" />
     </label>
 
-    <button type="submit">Post Advert</button>
+    <label for="imageUrl" class="flex flex-col mb-1">
+      <span class="text-sm mb-1" style="color: #08415c;">Upload Image:</span>
+      <input type="file" name="imageUrl" required />
+    </label>
 
+    <div class="flex flex-col gap-3 mb-1">
+      <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded">Post Advert</button>
+      <button type="button" class="close-button bg-gray-300 text-gray-700 py-2 px-4 rounded">Close</button>
+    </div>
   </form>
 </dialog>
